parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> tables
Rule 1     tables -> table
Rule 2     tables -> tables table
Rule 3     table -> DICE SEPARATOR LABEL rows
Rule 4     rows -> row
Rule 5     rows -> rows row
Rule 6     row -> NUMBER SEPARATOR entries
Rule 7     row -> RANGE SEPARATOR entries
Rule 8     entries -> entry
Rule 9     entries -> entries COMMA entry
Rule 10    entry -> LABEL
Rule 11    entry -> NUMBER LABEL
Rule 12    entry -> DICE LABEL

Terminals, with rules where they appear

COMMA                : 9
DICE                 : 3 12
LABEL                : 3 10 11 12
NUMBER               : 6 11
RANGE                : 7
SEPARATOR            : 3 6 7
error                : 

Nonterminals, with rules where they appear

entries              : 6 7 9
entry                : 8 9
row                  : 4 5
rows                 : 3 5
table                : 1 2
tables               : 2 0

Parsing method: LALR

state 0

    (0) S' -> . tables
    (1) tables -> . table
    (2) tables -> . tables table
    (3) table -> . DICE SEPARATOR LABEL rows

    DICE            shift and go to state 3

    tables                         shift and go to state 1
    table                          shift and go to state 2

state 1

    (0) S' -> tables .
    (2) tables -> tables . table
    (3) table -> . DICE SEPARATOR LABEL rows

    DICE            shift and go to state 3

    table                          shift and go to state 4

state 2

    (1) tables -> table .

    DICE            reduce using rule 1 (tables -> table .)
    $end            reduce using rule 1 (tables -> table .)


state 3

    (3) table -> DICE . SEPARATOR LABEL rows

    SEPARATOR       shift and go to state 5


state 4

    (2) tables -> tables table .

    DICE            reduce using rule 2 (tables -> tables table .)
    $end            reduce using rule 2 (tables -> tables table .)


state 5

    (3) table -> DICE SEPARATOR . LABEL rows

    LABEL           shift and go to state 6


state 6

    (3) table -> DICE SEPARATOR LABEL . rows
    (4) rows -> . row
    (5) rows -> . rows row
    (6) row -> . NUMBER SEPARATOR entries
    (7) row -> . RANGE SEPARATOR entries

    NUMBER          shift and go to state 9
    RANGE           shift and go to state 10

    rows                           shift and go to state 7
    row                            shift and go to state 8

state 7

    (3) table -> DICE SEPARATOR LABEL rows .
    (5) rows -> rows . row
    (6) row -> . NUMBER SEPARATOR entries
    (7) row -> . RANGE SEPARATOR entries

    DICE            reduce using rule 3 (table -> DICE SEPARATOR LABEL rows .)
    $end            reduce using rule 3 (table -> DICE SEPARATOR LABEL rows .)
    NUMBER          shift and go to state 9
    RANGE           shift and go to state 10

    row                            shift and go to state 11

state 8

    (4) rows -> row .

    NUMBER          reduce using rule 4 (rows -> row .)
    RANGE           reduce using rule 4 (rows -> row .)
    DICE            reduce using rule 4 (rows -> row .)
    $end            reduce using rule 4 (rows -> row .)


state 9

    (6) row -> NUMBER . SEPARATOR entries

    SEPARATOR       shift and go to state 12


state 10

    (7) row -> RANGE . SEPARATOR entries

    SEPARATOR       shift and go to state 13


state 11

    (5) rows -> rows row .

    NUMBER          reduce using rule 5 (rows -> rows row .)
    RANGE           reduce using rule 5 (rows -> rows row .)
    DICE            reduce using rule 5 (rows -> rows row .)
    $end            reduce using rule 5 (rows -> rows row .)


state 12

    (6) row -> NUMBER SEPARATOR . entries
    (8) entries -> . entry
    (9) entries -> . entries COMMA entry
    (10) entry -> . LABEL
    (11) entry -> . NUMBER LABEL
    (12) entry -> . DICE LABEL

    LABEL           shift and go to state 17
    NUMBER          shift and go to state 14
    DICE            shift and go to state 18

    entries                        shift and go to state 15
    entry                          shift and go to state 16

state 13

    (7) row -> RANGE SEPARATOR . entries
    (8) entries -> . entry
    (9) entries -> . entries COMMA entry
    (10) entry -> . LABEL
    (11) entry -> . NUMBER LABEL
    (12) entry -> . DICE LABEL

    LABEL           shift and go to state 17
    NUMBER          shift and go to state 14
    DICE            shift and go to state 18

    entries                        shift and go to state 19
    entry                          shift and go to state 16

state 14

    (11) entry -> NUMBER . LABEL

    LABEL           shift and go to state 20


state 15

    (6) row -> NUMBER SEPARATOR entries .
    (9) entries -> entries . COMMA entry

    NUMBER          reduce using rule 6 (row -> NUMBER SEPARATOR entries .)
    RANGE           reduce using rule 6 (row -> NUMBER SEPARATOR entries .)
    DICE            reduce using rule 6 (row -> NUMBER SEPARATOR entries .)
    $end            reduce using rule 6 (row -> NUMBER SEPARATOR entries .)
    COMMA           shift and go to state 21


state 16

    (8) entries -> entry .

    COMMA           reduce using rule 8 (entries -> entry .)
    NUMBER          reduce using rule 8 (entries -> entry .)
    RANGE           reduce using rule 8 (entries -> entry .)
    DICE            reduce using rule 8 (entries -> entry .)
    $end            reduce using rule 8 (entries -> entry .)


state 17

    (10) entry -> LABEL .

    COMMA           reduce using rule 10 (entry -> LABEL .)
    NUMBER          reduce using rule 10 (entry -> LABEL .)
    RANGE           reduce using rule 10 (entry -> LABEL .)
    DICE            reduce using rule 10 (entry -> LABEL .)
    $end            reduce using rule 10 (entry -> LABEL .)


state 18

    (12) entry -> DICE . LABEL

    LABEL           shift and go to state 22


state 19

    (7) row -> RANGE SEPARATOR entries .
    (9) entries -> entries . COMMA entry

    NUMBER          reduce using rule 7 (row -> RANGE SEPARATOR entries .)
    RANGE           reduce using rule 7 (row -> RANGE SEPARATOR entries .)
    DICE            reduce using rule 7 (row -> RANGE SEPARATOR entries .)
    $end            reduce using rule 7 (row -> RANGE SEPARATOR entries .)
    COMMA           shift and go to state 21


state 20

    (11) entry -> NUMBER LABEL .

    COMMA           reduce using rule 11 (entry -> NUMBER LABEL .)
    NUMBER          reduce using rule 11 (entry -> NUMBER LABEL .)
    RANGE           reduce using rule 11 (entry -> NUMBER LABEL .)
    DICE            reduce using rule 11 (entry -> NUMBER LABEL .)
    $end            reduce using rule 11 (entry -> NUMBER LABEL .)


state 21

    (9) entries -> entries COMMA . entry
    (10) entry -> . LABEL
    (11) entry -> . NUMBER LABEL
    (12) entry -> . DICE LABEL

    LABEL           shift and go to state 17
    NUMBER          shift and go to state 14
    DICE            shift and go to state 18

    entry                          shift and go to state 23

state 22

    (12) entry -> DICE LABEL .

    COMMA           reduce using rule 12 (entry -> DICE LABEL .)
    NUMBER          reduce using rule 12 (entry -> DICE LABEL .)
    RANGE           reduce using rule 12 (entry -> DICE LABEL .)
    DICE            reduce using rule 12 (entry -> DICE LABEL .)
    $end            reduce using rule 12 (entry -> DICE LABEL .)


state 23

    (9) entries -> entries COMMA entry .

    COMMA           reduce using rule 9 (entries -> entries COMMA entry .)
    NUMBER          reduce using rule 9 (entries -> entries COMMA entry .)
    RANGE           reduce using rule 9 (entries -> entries COMMA entry .)
    DICE            reduce using rule 9 (entries -> entries COMMA entry .)
    $end            reduce using rule 9 (entries -> entries COMMA entry .)

